# minimal-cmake-app-and-lib

./: CMakeLists.txt  README.md
application/: Application.cc  CMakeLists.txt
